# quantum_contrastive

./: .gitignore  README.md  Reproducibility.md  anchor_neighbors.py  pyproject.toml  requirements.txt  run_training_iter.sh  setup.py  test_stl10.py  train.py  utility.py  visualize_tsne.py
models/: contrastive_model.py
src/losses/: contrastive.py
src/quantum_contrastive/eval/: knn_eval.py  linear_probe.py
src/quantum_contrastive/losses/: contrastive.py
src/quantum_contrastive/models/: contrastive_model.py
src/quantum_contrastive/visual/: plot_format.py
tests/: test_model.py
