# pyproject.toml
[project]
name = "quantum_contrastive"
version = "0.1.0"
dependencies = [
    "anyio==4.9.0"
    "click==8.2.1"
    "contourpy==1.3.2"
    "cycler==0.12.1"
    "docutils==0.21.2"
    "filelock==3.18.0"
    "fonttools==4.58.5"
    "fsspec==2025.5.1"
    "h11==0.16.0"
    "idna==3.10"
    "itsdangerous==2.2.0"
    "jedi==0.19.2"
    "Jinja2==3.1.6"
    "joblib==1.5.1"
    "kiwisolver==1.4.8"
    "loro==1.5.2"
    "marimo==0.14.10"
    "Markdown==3.8.2"
    "MarkupSafe==3.0.2"
    "matplotlib==3.10.3"
    "mpmath==1.3.0"
    "narwhals==1.45.0"
    "networkx==3.5"
    "numpy==2.3.1"
    "packaging==25.0"
    "pandas==2.3.0"
    "parso==0.8.4"
    "pillow==11.3.0"
    "psutil==7.0.0"
    "Pygments==2.19.2"
    "pymdown-extensions==10.16"
    "pyparsing==3.2.3"
    "python-dateutil==2.9.0.post0"
    "pytz==2025.2"
    "PyYAML==6.0.2"
    "scikit-learn==1.7.0"
    "scipy==1.16.0"
    "six==1.17.0"
    "sniffio==1.3.1"
    "starlette==0.47.1"
    "sympy==1.14.0"
    "threadpoolctl==3.6.0"
    "tomlkit==0.13.3"
    "torch==2.7.1"
    "torchvision==0.22.1"
    "tqdm==4.67.1"
    "typing_extensions==4.14.1"
    "tzdata==2025.2"
    "uvicorn==0.35.0"
    "websockets==15.0.1"

]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
